--- a/circle.yml
+++ b/circle.yml
@@ -21,8 +21,8 @@ dependencies:
     - pip install coveralls
 test:
   override:
-    - cd /home/ubuntu/isambard
-    - python isambard/configure.py -C
-    - nosetests unit_tests/ --with-coverage  --cover-package=isambard
+    - cd /home/ubuntu/isambard_dev
+    - python isambard_dev/configure.py -C
+    - nosetests unit_tests/ --with-coverage  --cover-package=isambard_dev
   post:
     - bash <(curl -s https://codecov.io/bash) -t dbf3a333-e731-4885-ba4e-84514bc993c0
