--- a/circle.yml
+++ b/circle.yml
@@ -20,3 +20,4 @@ test:
     - nosetests unit_tests/ --with-coverage  --cover-package=isambard_dev
   post:
     - bash <(curl -s https://codecov.io/bash) -t dbf3a333-e731-4885-ba4e-84514bc993c0
+    - pip install -U pip setuptools virtualenv
